--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <hr>
         <h1>Contact Us</h1>
         <h6>We my take 3-6 business days to respond</h6>
-        <h5>Click the green button to submit or the red button to clear the form</h5>
+        <!--Made the directions correspond with words instead of colors.-->
+        <h5>Click the Clear Form button to clear the form or the Submit Form button to submit the form data.</h5>
         <form>
             <h2>Contact Form</h2>
             <div>
@@ -58,8 +59,10 @@
                 Other Notes:
                 <textarea></textarea>
             </div>
-            <input type="submit" class="btn1">
-            <input type="submit" class="btn2">
+            <!--Made the buttons say Clear Form or Submit Form.
+            Also switched input type of red button / Clear Form to "reset"-->
+            <input type="reset" value="Clear Form" class="btn1">
+            <input type="submit" value="Submit Form" class="btn2">
         </form>
         <hr>
         <h1>Directions</h1>
