changed link titles for clarity

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <li>
                 <a href="index.html">Home Page</a>
             </li>
-            <li>
-                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Link 2</a>
+            <li> <!--Changed link titles to be clear-->
+                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Intro to Web Accessibility</a>
             </li>
             <li>
-                <a href="https://www.w3.org/TR/WCAG21/">Link 3</a>
+                <a href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines</a>
             </li>
         </ul>
     </div>
