edited divs to semantic HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="nav">
+    <nav class="nav">
         <img src="assets/images/logo.png"
         alt="Four Balloons Site Logo"> <!--Alt text added-->
         <ul>
@@ -21,8 +21,8 @@
                 <a href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines</a>
             </li>
         </ul>
-    </div>
-    <div class="main">
+    </nav>
+    <main class="main">
         <!--Removed the flashy content before this person causes seizures and eyestrain-->
         <h1>WebFiesta: The Online Party Supply Superstore!!</h1>
         <h1>About Us</h1> 
@@ -87,14 +87,14 @@
             Icons made by <a href="https://www.flaticon.com/authors/fjstudio" title="fjstudio">fjstudio</a> from 
             <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
-    </div>
-    <div class="footer">
+    </main>
+    <footer class="footer">
         Thanks for stopping by ❤️ 
         <div>
             <img src="assets/images/logo.png"
             alt="Four Balloons Site Logo"> <!--Alt text added-->
             <a href="https://creazilla.com/nodes/64384-colourful-balloons-clipart">Cute logo provided by ElisaRiva via Pixabay</a>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
